// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectButtonItem {"Icon": [Object], "disabled": true, "label": "ButtonSelect", "showIcon": true, "size": "large"} 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "#a2a5a9",
      "borderRadius": 7,
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "gap": 10.5,
      "height": 49,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
  testID="SelectButtonItem_TouchableOpacity"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={21}
    bbWidth={21}
    fill="none"
    focusable={false}
    height={21}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#a2a5a9"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 21,
          "width": 21,
        },
      ]
    }
    testID="SelectButtonItem_Icon"
    vbHeight={24}
    vbWidth={24}
    width={21}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4288849321,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M7 7l10 10"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4288849321,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="SelectButtonItem_Icon"
      />
      <RNSVGPath
        d="M17 8l0 9l-9 0"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4288849321,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="SelectButtonItem_Icon"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      [
        {
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontWeight": 600,
        },
        {
          "fontSize": 17.5,
        },
        {
          "color": "#56595f",
        },
        {
          "color": "#a2a5a9",
        },
      ]
    }
    nativeID="3"
    numberOfLines={1}
    style={
      [
        {
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontWeight": 600,
        },
        {
          "fontSize": 17.5,
        },
        {
          "color": "#56595f",
        },
        {
          "color": "#a2a5a9",
        },
      ]
    }
    testID="SelectButtonItem_Text"
  >
    ButtonSelect
  </Text>
</View>
`;

exports[`SelectButtonItem {"Icon": [Object], "index": 1, "label": "ButtonSelect", "size": "xlarge"} 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "transparent",
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "gap": 10.5,
      "height": 56,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
  testID="SelectButtonItem_TouchableOpacity"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={28}
    bbWidth={28}
    fill="none"
    focusable={false}
    height={28}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#56595f"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 28,
          "width": 28,
        },
      ]
    }
    testID="SelectButtonItem_Icon"
    vbHeight={24}
    vbWidth={24}
    width={28}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4283849055,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M7 7l10 10"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4283849055,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="SelectButtonItem_Icon"
      />
      <RNSVGPath
        d="M17 8l0 9l-9 0"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4283849055,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="SelectButtonItem_Icon"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "color": "rgba(86, 89, 95, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontWeight": 600,
        },
        {
          "fontSize": 21,
        },
        {
          "color": "#56595f",
        },
      ]
    }
    nativeID="4"
    numberOfLines={1}
    style={
      [
        {
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontWeight": 600,
        },
        {
          "fontSize": 21,
        },
        {
          "color": "#56595f",
        },
        {
          "color": "rgba(86, 89, 95, 1)",
        },
      ]
    }
    testID="SelectButtonItem_Text"
  >
    ButtonSelect
  </Text>
</View>
`;

exports[`SelectButtonItem {"Icon": [Object], "showIcon": false, "size": "base"} 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "transparent",
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "gap": 7,
      "height": 35,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
  testID="SelectButtonItem_TouchableOpacity"
>
  <Text
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "color": "rgba(24, 26, 31, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontWeight": 600,
        },
        {
          "fontSize": 14,
        },
        {
          "color": "#56595f",
        },
      ]
    }
    nativeID="2"
    numberOfLines={1}
    style={
      [
        {
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontWeight": 600,
        },
        {
          "fontSize": 14,
        },
        {
          "color": "#56595f",
        },
        {
          "color": "rgba(24, 26, 31, 1)",
        },
      ]
    }
    testID="SelectButtonItem_Text"
  />
</View>
`;

exports[`SelectButtonItem {"Icon": [Object], "size": "small"} 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "transparent",
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "gap": 7,
      "height": 28,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
  testID="SelectButtonItem_TouchableOpacity"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={14}
    bbWidth={14}
    fill="none"
    focusable={false}
    height={14}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#56595f"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 14,
          "width": 14,
        },
      ]
    }
    testID="SelectButtonItem_Icon"
    vbHeight={24}
    vbWidth={24}
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4283849055,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M7 7l10 10"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4283849055,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="SelectButtonItem_Icon"
      />
      <RNSVGPath
        d="M17 8l0 9l-9 0"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4283849055,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="SelectButtonItem_Icon"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "color": "rgba(24, 26, 31, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontWeight": 600,
        },
        {
          "fontSize": 12.25,
        },
        {
          "color": "#56595f",
        },
      ]
    }
    nativeID="1"
    numberOfLines={1}
    style={
      [
        {
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontWeight": 600,
        },
        {
          "fontSize": 12.25,
        },
        {
          "color": "#56595f",
        },
        {
          "color": "rgba(24, 26, 31, 1)",
        },
      ]
    }
    testID="SelectButtonItem_Text"
  />
</View>
`;

exports[`SelectButtonItem {"label": "ButtonSelect"} 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "transparent",
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "gap": 7,
      "height": 35,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
  testID="SelectButtonItem_TouchableOpacity"
>
  <Text
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "color": "rgba(24, 26, 31, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontWeight": 600,
        },
        {
          "fontSize": 14,
        },
        {
          "color": "#56595f",
        },
      ]
    }
    nativeID="0"
    numberOfLines={1}
    style={
      [
        {
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontWeight": 600,
        },
        {
          "fontSize": 14,
        },
        {
          "color": "#56595f",
        },
        {
          "color": "rgba(24, 26, 31, 1)",
        },
      ]
    }
    testID="SelectButtonItem_Text"
  >
    ButtonSelect
  </Text>
</View>
`;
